feat(posts): better collaboration for posts
